fix z-index

--- a/assets/scss/player.scss
+++ b/assets/scss/player.scss
@@ -73,7 +73,7 @@
       width: 100vh;
       height: 100vw;
       left: calc(50% + 50vw);
-      top: calc(50% - 75vh);
+      top: calc(50% - 73vh);
       transform: rotateZ(90deg);
       transform-origin: left top;
     }
