--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -732,11 +732,11 @@ $duration-page-scroll: .6s;
     max-width: 100px;
   }
 }
-.footer__info,.footer__contacts,.aside{
+.footer__title,.footer__contacts-mobile,.footer__info,.footer__contacts,.aside{
   z-index: 1;
 }
 .body.video-opened{
-  .header,.footer__info,.footer__contacts,.aside{
+  .header,.footer__title,.footer__contacts-mobile,.footer__info,.footer__contacts,.aside{
     z-index: -1;
   }
 }
